--- a/salao-beleza/pom.xml
+++ b/salao-beleza/pom.xml
@@ -59,9 +59,9 @@
 		</dependency>
 <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
 <dependency>
-    <groupId>jakarta.validation</groupId>
-    <artifactId>jakarta.validation-api</artifactId>
-    <version>2.0.2</version>
+        <groupId>javax.validation</groupId>
+    <artifactId>validation-api</artifactId>
+    <version>1.0.0.GA</version>
 </dependency>
 
 
